# lwW2RP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ToDo.md  build.sh  install_yamlcpp.sh  uninstall.sh  w2rpConfig.cmake.in
ZZ_logs/: eval.py  eval_lttng.py  lttng.sh
ZZ_logs/lttng_tracing/ust/uid/1000/64-bit/: metadata
cmake/modules/: FindTinyXML2.cmake
cmake/packaging/: Config.cmake.in
examples/: setup_defines.json  setup_defines.yaml  w2rp_config.json  w2rp_config.yaml
examples/app_videoStream/: reader_test.cpp  w2rp_config.json  writer_test.cpp
include/w2rp/: cacheChange.h  cacheChange.hpp  changeForReader.h  changeForReader.hpp  changeForWriter.h  changeForWriter.hpp  config.hpp  log.hpp  readerProxy.h  readerProxy.hpp  sampleFragment.h  sampleFragment.hpp  w2rp-tp.h  writerProxy.h  writerProxy.hpp
include/w2rp/comm/: UDPComm.hpp  socketEndpoint.hpp
include/w2rp/config/: config.hpp  readerConfig.hpp  setupConfig.hpp  writerConfig.hpp
include/w2rp/entities/: reader.h  reader.hpp  writer.h  writer.hpp
include/w2rp/guid/: entityID.hpp  guid.hpp  guidPrefix.hpp  guidPrefixManager.hpp
include/w2rp/helper/: fragmentation.h  fragmentation.hpp  safe_queue.hpp  serializedPayload.h  serializedPayload.hpp
include/w2rp/messages/: fragmentation.h  message_net.hpp  messages.h  messages.hpp
include/w2rp/qos/: qos.hpp
include/w2rp/timer/: activeWaitTimer.hpp  periodicEvent.hpp  timedEvent.hpp  timerManager.hpp
src/cpp/w2rp/: changeForReader.cpp  changeForWriter.cpp  writerProxy.cpp
src/w2rp/: changeForReader.cpp  changeForWriter.cpp  config.cpp  log.cpp  readerProxy.cpp  w2rp-tp.cpp  writerProxy.cpp
src/w2rp/comm/: UDPComm.cpp
src/w2rp/config/: readerConfig.cpp  setupConfig.cpp  writerConfig.cpp
src/w2rp/entities/: reader.cpp  writer.cpp
src/w2rp/helper/: fragmentation.cpp
src/w2rp/messages/: messages.cpp
src/w2rp/timer/: timerManager.cpp
test/app_videoStream/: reader_test.cpp  reader_test.hpp  w2rp_config.json  writer_test.cpp
test/config/: readConfig_test.cpp
test/entities/: reader_test.cpp  reader_test.hpp  writer_test.cpp  writer_test.hpp
test/guid/: guid_test.cpp
test/scripts/: eval_periodic_timer.py  eval_send_routine.py  eval_send_routine_lttng.py  lttng.sh
test/timer/: timer_test.cpp  timer_test_function.cpp  timer_test_object.cpp
test/unit_test/app_videoStream/: img_config.hpp  reader_test.cpp  w2rp_config.json  writer_test.cpp  writer_test.hpp
test/unit_test/entities/: reader_test.cpp  reader_test.hpp  writer_test.cpp
test/unit_test/timer/: timer_test_active_wait.cpp  timer_test_function.cpp  timer_test_object.cpp
